Worked on live feed
Need more data to do this

--- a/pages/testPage.html
+++ b/pages/testPage.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		
-		<div id="shameContainer"></div>
+		<div class="buildAlertContainer" id="shameContainer"></div>
 		<script type="text/javascript" src="/js/testBoard.js" charset="utf-8"></script>
 
 	
