--- a/pages/buildAlertPage.html
+++ b/pages/buildAlertPage.html
@@ -4,12 +4,12 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="initial-scale=1">
-		<title>Shame</title>
+		<title>BuildAlert</title>
 	</head>
 	<body>
 		
 		<div class="buildAlertContainer" id="shameContainer"></div>
-		<script type="text/javascript" src="/js/testBoard.js" charset="utf-8"></script>
+		<script type="text/javascript" src="/js/buildAlertBoard.js" charset="utf-8"></script>
 
 	
 	</body>
